2003-06-12  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-file.c (nautilus_file_fit_date_as_string):
	Don't call gettext on NULL string.
	Patch from hidetoshi.tajima@sun.com
	Fixes #113930
	
2003-06-11  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-properties-window.c (fm_properties_window_present):
	Handle the case when the data is alreay ready.
	This fixes properties on the home icon on the desktop.

2003-06-11  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-list-view.c (fm_list_view_did_not_drag) 
	(button_press_callback):
	Don't deselect multiple selected files when dragging
	with middle button.

2003-06-11  Alexander Larsson  <alexl@redhat.com>

	* icons/Makefile.am:
	* icons/crux_eggplant/Makefile.am:
	* icons/crux_eggplant/decrement-i.png:
	* icons/crux_eggplant/decrement.png:
	* icons/crux_eggplant/increment-i.png:
	* icons/crux_eggplant/increment.png:
	* icons/crux_eggplant/number_strip.png:
	* icons/crux_eggplant/theme_preview.png:
	* icons/crux_eggplant/throbber/001.png:
	* icons/crux_eggplant/throbber/002.png:
	* icons/crux_eggplant/throbber/003.png:
	* icons/crux_eggplant/throbber/004.png:
	* icons/crux_eggplant/throbber/005.png:
	* icons/crux_eggplant/throbber/006.png:
	* icons/crux_eggplant/throbber/007.png:
	* icons/crux_eggplant/throbber/008.png:
	* icons/crux_eggplant/throbber/009.png:
	* icons/crux_eggplant/throbber/010.png:
	* icons/crux_eggplant/throbber/011.png:
	* icons/crux_eggplant/throbber/012.png:
	* icons/crux_eggplant/throbber/013.png:
	* icons/crux_eggplant/throbber/014.png:
	* icons/crux_eggplant/throbber/015.png:
	* icons/crux_eggplant/throbber/016.png:
	* icons/crux_eggplant/throbber/017.png:
	* icons/crux_eggplant/throbber/018.png:
	* icons/crux_eggplant/throbber/019.png:
	* icons/crux_eggplant/throbber/020.png:
	* icons/crux_eggplant/throbber/021.png:
	* icons/crux_eggplant/throbber/022.png:
	* icons/crux_eggplant/throbber/023.png:
	* icons/crux_eggplant/throbber/024.png: